--- a/src/Notes/Notes.css
+++ b/src/Notes/Notes.css
@@ -1,7 +1,7 @@
 .allNotes {
     background: #3AAFA9;
-    height: 85vh;
-    width: 70vw;
+
+    width: 76vw;
 }
 
 .allNotes > h2 {
@@ -21,8 +21,11 @@
     background: rgb(52, 78, 87);
     padding: 10px;
     font-size: 20px;
-    width: 64vw;
+    width: 95%;
     border-radius: 15px;
-    margin: 0 8px 8px;
+    margin: 5px auto 15px;
 }
 
+.allNotes> ul > li:hover {
+    background: orange;
+}
