--- a/src/Notes/Notes.css
+++ b/src/Notes/Notes.css
@@ -36,5 +36,13 @@
 .buttonBox {
     padding: 20px;
     text-align: center;
-    min-height: 10vh;
+}
+
+.noNotes {
+    background: white;
+    color: red;
+    border: 2px solid red;
+    font-size: 16px;
+    padding: 3em;
+    margin: 2em;
 }
