--- a/src/components/AddNote/AddNote.css
+++ b/src/components/AddNote/AddNote.css
@@ -1,29 +1,38 @@
+.buttonBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
 .addNote {
-    width: 50%;
+    width: 80%;
     margin: 30px auto;
     border: 3px solid black;
     border-radius: 50px;
-    padding: 20px;
+    padding: 15px;
     background: #F3FFFF;
 }
 
 .addNote > h2 {
-    font-size: 3em;
+    font-size: 2.5em;
     background: #F3FFFF;
     margin: 10px;
 }
 
 #noteName {
-    font-size: 1.5em;
+    font-size: 1.2em;
+    margin: 0 5px 0 5%;
     border-bottom: 2px solid black;
     text-align: left;
+    width: 75%;
 }
 
 #noteContent {
-    font-size: 1.2em;
+    font-size: 1em;
     text-align: left;
-    width: 65%;
+    width: 75%;
     height: 15vh;
+    margin: 0 5px 0 5%;
 }
 
 .text * {
@@ -31,9 +40,10 @@
 }
 
 #chooseFolder {
-    font-size: 1.5em;
+    font-size: 1.2em;
+    margin: 0 5px 0 5%;
     border-bottom: 2px solid black;
-    width: 65%;
+    width: 70%;
 }
 
 #chooseFolder > option {
@@ -41,3 +51,25 @@
     color: black;
 }
 
+.addNoteButton {
+    padding: 10px 20px;
+    background: rgb(255, 209, 83);
+    border-radius: 50px;
+    font-size: 14px;
+    width: 30%;
+    font-weight: bold;
+}
+
+.addNoteButton:disabled {
+    background: lightgray;
+}
+
+.addNoteButton:hover:enabled {
+    border: 3px solid darkorange;
+    background: orange;
+}
+
+.addNoteButton:active {
+    border: 3px solid orange;
+    background: yellow;
+}
