--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -56,7 +56,15 @@ a {
     margin: 10px 30px;
 }
 
-
 .allNotes > ul {
     margin: 0;
+}
+
+.noInfo {
+    background: white;
+    color: red;
+    border: 2px solid red;
+    font-size: 16px;
+    padding: 3em;
+    margin: 2em;
 }
