made app accessible

--- a/src/Notes/Notes.css
+++ b/src/Notes/Notes.css
@@ -9,7 +9,7 @@
     padding: 10px;
     color: #17252A;
     background: #3AAFA9;
-    color: darkslateblue;
+    color: black;
     width: 100%;
 }
 
