--- a/src/Folders/Folders.css
+++ b/src/Folders/Folders.css
@@ -6,7 +6,7 @@
 .allFolders > h2 {
     padding: 10px;
     background: #2B7A78;
-    color: darkslateblue;
+    color: white;
 }
 
 .allFolders > li {
@@ -66,6 +66,7 @@
 
 .numberNotes, .nameBox {
     background: #2B7A78;
+    color: rgb(255, 255, 254);
 }
 
 .deleteFolderButton {
