--- a/src/components/AddNote/AddNote.css
+++ b/src/components/AddNote/AddNote.css
@@ -78,3 +78,9 @@ legend {
     border: 3px solid orange;
     background: yellow;
 }
+
+.errorBox {
+    font-size: 1.2em;
+    font-weight: bolder;
+    color: red;
+}
